Enhance README with JavaFX application details
Expanded README to include details about JavaFX application, features, supported operations, and example conversions.